<resources>
    <string name="app_name">TracknShare</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="New_post">Create a New Post</string>
    <string name="post_action">Post</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Post_button_text">Create Post</string>
    <string name="Header_distance">Distance</string>
    <string name="Header_Timing">Timing</string>
    <string name="Header_calories">Calories burned(kcal)</string>
    <string name="Header_pace">Pace (m/s)</string>
    <string name="Header_steps">Steps</string>
    <string name="post_caption">Caption</string>
    <string name="header_steps_chart">Steps of previous runs</string>
    <string name="header_runs">Total runs</string>
    <string name="header_calories_chart">Calories burned(kcal)</string>
    <string name="header_pace_chart">Run Paces</string>
    <string name ="header_steps">Steps</string>
</resources>