<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#C3FFFFFF">

    <ImageView
        android:id="@+id/run_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintDimensionRatio="10:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="false"
        android:padding="2dp"
        android:text="@string/Header_distance"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableTint="@color/orange"
        app:layout_constraintStart_toStartOf="@+id/run_date"
        app:layout_constraintTop_toBottomOf="@+id/run_date" />

    <TextView
        android:id="@+id/run_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/header_distance"
        app:layout_constraintTop_toBottomOf="@+id/header_distance" />

    <TextView
        android:id="@+id/header_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:padding="2dp"
        android:text="Date"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/run_image"
        app:layout_constraintTop_toBottomOf="@+id/run_image" />

    <TextView
        android:id="@+id/run_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/header_date"
        app:layout_constraintTop_toBottomOf="@+id/header_date" />

    <TextView
        android:id="@+id/header_timing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/Header_Timing"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/header_distance"
        app:layout_constraintTop_toTopOf="@+id/header_distance" />

    <TextView
        android:id="@+id/run_timing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/header_timing"
        app:layout_constraintTop_toBottomOf="@+id/header_timing" />

    <TextView
        android:id="@+id/header_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="2dp"
        android:text="Calories burned(kcal)"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/header_distance"
        app:layout_constraintTop_toBottomOf="@+id/run_distance" />

    <TextView
        android:id="@+id/run_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/header_calories"
        app:layout_constraintTop_toBottomOf="@+id/header_calories" />

    <TextView
        android:id="@+id/header_pace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/Header_pace"
        android:textAllCaps="false"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/header_timing"
        app:layout_constraintTop_toTopOf="@+id/header_calories" />

    <TextView
        android:id="@+id/run_pace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/header_pace"
        app:layout_constraintTop_toBottomOf="@+id/header_pace" />

    <ImageView
        android:id="@+id/post"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="@+id/run_image"
        app:layout_constraintTop_toTopOf="@+id/textView19"
        app:srcCompat="@drawable/share" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:paddingTop="7dp"
        android:paddingEnd="2dp"
        android:paddingBottom="7dp"
        android:text="post"
        android:textAllCaps="true"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/header_date"
        app:layout_constraintTop_toTopOf="@+id/header_date" />

    <ImageView
        android:id="@+id/post_title"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@id/textView19"
        app:layout_constraintStart_toEndOf="@+id/textView19"
        app:layout_constraintTop_toTopOf="@+id/textView19"
        app:layout_constraintVertical_bias="0.266"
        app:srcCompat="@drawable/writing" />

</androidx.constraintlayout.widget.ConstraintLayout>