<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title=" "
                app:titleTextColor="@color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/avatar"
                android:layout_width="45dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="250dp"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/avatarIMG"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_avatar" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="Username"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/workoutDate"
                app:layout_constraintStart_toEndOf="@+id/avatar"
                app:layout_constraintTop_toTopOf="@+id/avatar" />

            <TextView
                android:id="@+id/workoutDate"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:text="03/02/2021"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/avatar"
                app:layout_constraintStart_toStartOf="@+id/username"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <ImageView
                android:id="@+id/post_Image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintDimensionRatio="h,10:9"
                app:layout_constraintEnd_toEndOf="@+id/postCaption"
                app:layout_constraintStart_toStartOf="@+id/postCaption"
                app:layout_constraintTop_toBottomOf="@+id/postCaption" />

            <TextView
                android:id="@+id/postCaption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="descriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescription"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/likesImg"
                app:layout_constraintStart_toStartOf="@+id/avatar"
                app:layout_constraintTop_toBottomOf="@+id/avatar" />

            <ImageView
                android:id="@+id/likesImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/avatar"
                app:srcCompat="@drawable/ic_heart" />

            <TextView
                android:id="@+id/likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="69"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/likesImg"
                app:layout_constraintEnd_toStartOf="@+id/likesImg"
                app:layout_constraintTop_toTopOf="@+id/likesImg" />

            <TextView
                android:id="@+id/header_distance_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:clickable="false"
                android:padding="2dp"
                android:text="@string/Header_distance"
                android:textIsSelectable="false"
                android:textSize="18sp"
                android:textStyle="bold"
                app:drawableTint="@color/orange"
                app:layout_constraintStart_toStartOf="@+id/post_Image"
                app:layout_constraintTop_toBottomOf="@+id/post_Image" />

            <TextView
                android:id="@+id/isLiked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/likesImg"
                app:layout_constraintEnd_toEndOf="@+id/likesImg"
                app:layout_constraintTop_toTopOf="@+id/likesImg" />

            <TextView
                android:id="@+id/run_distance_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/header_distance_post"
                app:layout_constraintTop_toBottomOf="@+id/header_distance_post" />

            <TextView
                android:id="@+id/header_timing_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/Header_Timing"
                android:textIsSelectable="false"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/header_distance_post"
                app:layout_constraintTop_toTopOf="@+id/header_distance_post" />

            <TextView
                android:id="@+id/run_timing_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/header_timing_post"
                app:layout_constraintTop_toBottomOf="@+id/header_timing_post" />

            <TextView
                android:id="@+id/header_calories_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="2dp"
                android:text="@string/Header_calories"
                android:textIsSelectable="false"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/header_distance_post"
                app:layout_constraintTop_toBottomOf="@+id/run_distance_post" />

            <TextView
                android:id="@+id/run_calories_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginBottom="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/header_calories_post"
                app:layout_constraintTop_toBottomOf="@+id/header_calories_post" />

            <TextView
                android:id="@+id/header_pace_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/Header_pace"
                android:textAllCaps="false"
                android:textIsSelectable="false"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/header_timing_post"
                app:layout_constraintTop_toTopOf="@+id/header_calories_post" />

            <TextView
                android:id="@+id/run_pace_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/header_pace_post"
                app:layout_constraintTop_toBottomOf="@+id/header_pace_post" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>